Fixed form submissions, such as submit button interactions with password visibility button.

--- a/cssi-web-portal/front_end/src/styles.scss
+++ b/cssi-web-portal/front_end/src/styles.scss
@@ -5,7 +5,7 @@
 @include mat-core();
 
 $light-theme-primary: mat-palette($mat-indigo);
-$light-theme-accent: mat-palette($mat-amber);
+$light-theme-accent: mat-palette($mat-pink);
 $light-theme-warn: mat-palette($mat-red);
 
 $light-theme: mat-light-theme(
